--- a/macacarefa/src/main/resources/templates/index.html
+++ b/macacarefa/src/main/resources/templates/index.html
@@ -68,8 +68,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div class="login-container">
             <h1 class="title">Macacarefa</h1>
             <div class="button-container">
-                <button class="login-button">Login</button>
-                <button class="register-button">Cadastrar</button>
+                <a href="login.html"><button class="login-button">Login</button></a>
+                <a href="cadastro.html"><button class="register-button">Cadastrar</button></a>
             </div>
         </div>
     </body>
