--- a/macacarefa/src/main/resources/templates/login.html
+++ b/macacarefa/src/main/resources/templates/login.html
@@ -4,63 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Macacarefa - Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #141414;
+            color: #ffcc00;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .login-container {
+            text-align: center;
+            background-color: #141414;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .title {
+            font-size: 48px;
+            font-weight: bold;
+            margin-bottom: 40px;
+        }
+
+        .login-button, .back-button {
+            background-color: transparent;
+            border: 2px solid #ffcc00;
+            border-radius: 10px;
+            padding: 10px 20px;
+            font-size: 18px;
+            color: #ffcc00;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .login-button:hover, .back-button:hover {
+            background-color: #ffcc00;
+            color: #141414;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+
+        input {
+            padding: 10px;
+            border: 2px solid #ffcc00;
+            border-radius: 5px;
+            background-color: #141414;
+            color: #ffcc00;
+        }
+
+        input::placeholder {
+            color: #ffcc00;
+        }
+
+        input:focus {
+            outline: none;
+            border-color: #ffcc00;
+        }
+
+        /* Posiciona o botão Voltar no canto superior esquerdo */
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+        }
+    </style>
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #141414;
-        color: #ffcc00;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .login-container {
-        text-align: center;
-        background-color: #141414;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-
-    .title {
-        font-size: 48px;
-        font-weight: bold;
-        margin-bottom: 40px;
-    }
-
-    .button-container {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-    }
-
-    .login-button, .register-button {
-        background-color: transparent;
-        border: 2px solid #ffcc00;
-        border-radius: 10px;
-        padding: 10px 20px;
-        font-size: 18px;
-        color: #ffcc00;
-        cursor: pointer;
-        transition: background-color 0.3s, color 0.3s;
-    }
-
-    .login-button:hover, .register-button:hover {
-        background-color: #ffcc00;
-        color: #141414;
-    }
-
-</style>
 <body>
+    <a href="index.html"><button class="back-button">Voltar</button></a>
     <div class="login-container">
         <h1 class="title">Login</h1>
         <form class="login-form">
@@ -68,7 +92,6 @@
             <input type="password" placeholder="Senha" required>
             <button class="login-button" type="submit">Entrar</button>
         </form>
-        <a href="index.html"><button class="back-button">Voltar</button></a>
     </div>
 </body>
 </html>
