--- a/macacarefa/src/main/resources/templates/index.html
+++ b/macacarefa/src/main/resources/templates/index.html
@@ -65,7 +65,7 @@
         <h1 class="title">Macacarefa</h1>
         <div class="button-container">
             <a href="login.html"><button class="login-button">Login</button></a>
-            <a href="cadastro.html"><button class="register-button">Cadastrar</button></a>
+            <a href="cadastro.html"><button class="register-button">Cadastrar-se</button></a>
         </div>
     </div>
 </body>
