--- a/macacarefa/src/main/resources/templates/cadastro.html
+++ b/macacarefa/src/main/resources/templates/cadastro.html
@@ -13,7 +13,9 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #141414;
+            background-image: url('../imagens/cadastro_background.png'); /* Caminho relativo correto */
+            background-size: cover;
+            background-position: center;
             color: #ffcc00;
             height: 100vh;
             display: flex;
@@ -86,7 +88,7 @@
 <body>
     <a href="index.html"><button class="back-button">Voltar</button></a>
     <div class="register-container">
-        <h1 class="title">Cadastro</h1>
+        <h1 class="title">Macacadastro</h1>
         <form class="register-form">
             <input type="text" placeholder="Nome" required>
             <input type="email" placeholder="Email" required>
