--- a/macacarefa/src/main/resources/templates/login.html
+++ b/macacarefa/src/main/resources/templates/login.html
@@ -84,7 +84,7 @@
     </style>
 </head>
 <body>
-    <a href="index.html"><button class="back-button">Voltar</button></a>
+    <a href="index"><button class="back-button">Voltar</button></a>
     <div class="login-container">
         <h1 class="title">Login</h1>
         <form class="login-form">
