--- a/macacarefa/src/main/resources/templates/login.html
+++ b/macacarefa/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,9 +87,9 @@
     <a href="index"><button class="back-button">Voltar</button></a>
     <div class="login-container">
         <h1 class="title">Login</h1>
-        <form class="login-form">
-            <input type="text" placeholder="Usuário" required>
-            <input type="password" placeholder="Senha" required>
+        <form th:action="@{/login}" method="post">
+            <input type="text" name="email" placeholder="Usuário" required>
+            <input type="password" name ="password" placeholder="Senha" required>
             <button class="login-button" type="submit">Entrar</button>
         </form>
     </div>
