--- a/macacarefa/src/main/resources/templates/index.html
+++ b/macacarefa/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-image: url('/imagens/bananas_background.png'); /* Caminho relativo correto */
+            background-image: url('../images/bananas_background.png'); /* Caminho relativo correto */
             background-size: cover;
             background-position: center;
             height: 100vh;
