--- a/macacarefa/src/main/resources/templates/login.html
+++ b/macacarefa/src/main/resources/templates/login.html
@@ -1,97 +1,100 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Macacarefa - Login</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Macacarefa - Login</title>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
 
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #141414;
-            color: #ffcc00;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #141414;
+                color: #ffcc00;
+                height: 100vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
 
-        .login-container {
-            text-align: center;
-            background-color: #141414;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
+            .login-container {
+                text-align: center;
+                background-color: #141414;
+                padding: 20px;
+                border-radius: 10px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            }
 
-        .title {
-            font-size: 48px;
-            font-weight: bold;
-            margin-bottom: 40px;
-        }
+            .title {
+                font-size: 48px;
+                font-weight: bold;
+                margin-bottom: 40px;
+            }
 
-        .login-button, .back-button {
-            background-color: transparent;
-            border: 2px solid #ffcc00;
-            border-radius: 10px;
-            padding: 10px 20px;
-            font-size: 18px;
-            color: #ffcc00;
-            cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
-        }
+            .login-button, .back-button {
+                background-color: transparent;
+                border: 2px solid #ffcc00;
+                border-radius: 10px;
+                padding: 10px 20px;
+                font-size: 18px;
+                color: #ffcc00;
+                cursor: pointer;
+                transition: background-color 0.3s, color 0.3s;
+            }
 
-        .login-button:hover, .back-button:hover {
-            background-color: #ffcc00;
-            color: #141414;
-        }
+            .login-button:hover, .back-button:hover {
+                background-color: #ffcc00;
+                color: #141414;
+            }
 
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            margin-bottom: 40px;
-        }
+            form {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                margin-bottom: 40px;
+            }
 
-        input {
-            padding: 10px;
-            border: 2px solid #ffcc00;
-            border-radius: 5px;
-            background-color: #141414;
-            color: #ffcc00;
-        }
+            input {
+                padding: 10px;
+                border: 2px solid #ffcc00;
+                border-radius: 5px;
+                background-color: #141414;
+                color: #ffcc00;
+            }
 
-        input::placeholder {
-            color: #ffcc00;
-        }
+            input::placeholder {
+                color: #ffcc00;
+            }
 
-        input:focus {
-            outline: none;
-            border-color: #ffcc00;
-        }
+            input:focus {
+                outline: none;
+                border-color: #ffcc00;
+            }
 
-        /* Posiciona o botão Voltar no canto superior esquerdo */
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-        }
-    </style>
-</head>
-<body>
-    <a href="index"><button class="back-button">Voltar</button></a>
-    <div class="login-container">
-        <h1 class="title">Login</h1>
-        <form th:action="@{/login}" method="post">
-            <input type="text" name="email" placeholder="Usuário" required>
-            <input type="password" name ="password" placeholder="Senha" required>
-            <button class="login-button" type="submit">Entrar</button>
-        </form>
-    </div>
-</body>
+            /* Posiciona o botão Voltar no canto superior esquerdo */
+            .back-button {
+                position: absolute;
+                top: 20px;
+                left: 20px;
+            }
+        </style>
+    </head>
+    <body>
+        <a href="index"><button class="back-button">Voltar</button></a>
+        <div class="login-container">
+            <h1 class="title">Login</h1>
+            <form th:action="@{/login}" method="post">
+                <input type="text"  id = "email" name="username" placeholder="Usuário" required>
+                <input type="password" id = "password" name ="password" placeholder="Senha" required>
+                <button class="login-button" type="submit">Entrar</button>
+            </form>
+            <div th:if="${param.error}" style="color: red;">
+                Usuário ou senha inválidos. Tente novamente.
+            </div>
+        </div>
+    </body>
 </html>
