--- a/macacarefa/src/main/resources/templates/cadastro.html
+++ b/macacarefa/src/main/resources/templates/cadastro.html
@@ -13,7 +13,7 @@
 
             body {
                 font-family: Arial, sans-serif;
-                background-image: url('../imagens/cadastro_background'); /* Caminho relativo correto */
+                background-image: url('../images/cadastro_background.png'); /* Caminho relativo correto */
                 background-size: cover;
                 background-position: center;
                 color: #ffcc00;
