Adicionando .zip do menino will que não sabe usar github

--- a/macacarefa/src/main/resources/templates/cadastro.html
+++ b/macacarefa/src/main/resources/templates/cadastro.html
@@ -17,7 +17,7 @@
 
             body {
                 font-family: "Alice", sans-serif;
-                background-image: url('https://media.discordapp.net/attachments/1168209151697096757/1305193568905723926/cadastro_background.png?ex=673223bc&is=6730d23c&hm=cafa01589a0ffb641fd39199beff2d19a1d899a8c0e824f9ab4535f6e3ee23a7&=&format=webp&quality=lossless&width=1193&height=671'); /* Caminho relativo correto */
+                background-image: url('https://i.imgur.com/uCkrUy0.png'); /* Caminho relativo correto */
                 background-size: cover;
                 background-position: center;
                 color: #f9ae25;
@@ -112,6 +112,8 @@
                 <input type="text" th:field="*{name}" placeholder="Name" required>
                 <input type="email" th:field="*{email}" placeholder="Email" required>
                 <input type="password" th:field="*{password}" placeholder="Senha" required>
+                
+                
                 <button class="cadastro-button" type="submit">Cadastrar</button>
             </form>
         </div>
