--- a/macacarefa/src/main/resources/templates/index.html
+++ b/macacarefa/src/main/resources/templates/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -17,7 +18,7 @@
 
         body {
             font-family: "Alice", sans-serif;
-            background-image: url('https://media.discordapp.net/attachments/1168209151697096757/1305193568163336232/bananas_background.png?ex=673223bb&is=6730d23b&hm=576ffb97f9001810ad59a4ad6329231ff350ac89e7f47a384aafdede8a13c4f9&=&format=webp&quality=lossless&width=1193&height=671');
+            background-image: url('https://i.imgur.com/hRaVF3W.png');
             background-size: cover;
             background-position: center;
             height: 100vh;
